# test-task-DimaTech

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANUAL_TESTS.md  README.md  TASK.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  database.py  exceptions.py  main.py
app/api/: deps.py
app/api/v1/routes/: admin.py  auth.py  users.py  webhook.py
app/models/: account.py  transaction.py  user.py
app/schemas/: account.py  user.py  webhook.py
app/services/: __init__.py  admin.py  auth.py  user.py  webhook.py
app/utils/: security.py
migrations/: env.py
migrations/versions/: 001_initial.py
tests/: conftest.py  test_admin_service.py  test_api.py  test_auth_service.py  test_user_service.py
